ambiente/cloudformation/ec2example.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: A simple EC2 instance
Parameters:
  KeyName:
    Description: "Name of an existing EC2 KeyPair to enable SSH access to the instance"
    Type: "AWS::EC2::KeyPair::KeyName"
    ConstraintDescription: "must be the name of an existing EC2 KeyPair."
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - m1.small
      - m1.large
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.    

Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-76f0061f
    us-west-1:
      AMI: ami-655a0a20
    eu-west-1:
      AMI: ami-7fd4e10b
    sa-east-1:
      AMI: ami-0056d4296b1120bc3
    
Resources: 
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !FindInMap [ RegionMap, !Ref 'AWS::Region', AMI ]
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref KeyName
      Tags: 
        - Key: "Name"
          Value: "MyEC2Instance"
      SecurityGroups:  
      - !Ref MySecurityGroup
      BlockDeviceMappings:
      - DeviceName: /dev/sdm
        Ebs:
          VolumeType: io1
          Iops: 200
          VolumeSize: 20
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -xe
          sudo amazon-linux-extras enable nginx1
          sudo yum -y install nginx
          sudo service nginx start
          sudo service nginx status
  
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable HTTP access via port 80"
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 80
        IpProtocol: tcp
        ToPort: 80
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22

Outputs:
  MyEC2InstanceURL:
   Description: "Web site"
   Value: !GetAtt MyEC2Instance.PublicDnsName
